# ee596-fp

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  EXPERIMENT_TRACKING_README.md  GRADING_COMPARISON_README.md  MONITORING_SUMMARY.md  Makefile  PIPELINE_SUMMARY.md  QUALITY_FLYWHEEL.md  QUICKSTART.md  README.md  REWARD_COMPARISON_GUIDE.md  guidelines.md  main.py  pyproject.toml  requirements-monitoring.txt  requirements.txt  test_reward_comparison.py  test_reward_comparison_standalone.py
TunRex/: REWARD_QUALITY_README.md  pyproject.toml
TunRex/src/tunrex/: __init__.py
TunRex/src/tunrex/datasets/: __init__.py  config.py  evaluate.py  loaders.py  reward_monitor.py  reward_quality.py  reward_wrapper.py  rewards.py
TunRex/src/tunrex/models/: __init__.py  gemma.py
TunRex/src/tunrex/monitoring/: README.md  __init__.py  grpo_integration.py  metrics_logger.py  reward_monitor.py  reward_wrapper.py  visualization.py
TunRex/src/tunrex/reward_comparison/: README.md  __init__.py  analysis.py  base.py  comparison.py  evaluators.py
TunRex/src/tunrex/tui/: __init__.py  main.py  styles.tcss
TunRex/src/tunrex/tui/helpers/: __init__.py  formatters.py
TunRex/src/tunrex/tui/screens/: browser.py  detail.py
TunRex/src/tunrex/tui/widgets/: __init__.py  comparison_panel.py  data_viewer.py  dataset_tree.py
TunRex/tests/: __init__.py  test_datasets.py  test_imports.py  test_loaders.py  test_models.py  test_rewards.py  test_tunrex_config.py
demo/: benchmark_demo.py  comparison_demo.py  demo.ipynb  demo.py  domain_demo.py  grpo_explainer.py  train_colab.ipynb
docker/: .env.example  Makefile
docs/: CICD_SETUP.md  EVALUATION_FRAMEWORK.md  EXPERIMENT_TRACKING_DESIGN.md  EXPERIMENT_TRACKING_USAGE.md  GRADING_COMPARISON.md  MONITORING.md  PIPELINE_GUIDE.md  PRIME_RL.md  QUICK_REFERENCE.md  REWARD_MONITORING.md  REWARD_QUALITY_MONITORING.md  RLOO_GUIDE.md  RUBRIC_TESTING_GUIDE.md  research-to-platform-mapping.md  tpu-pricing.md  wandb-metrics.md
enhancements/: README.md  composite_rewards.py  verification_rewards.py
examples/: colab_kaggle_example.ipynb  compare_grading_methods.py  compare_grpo_vs_rloo.sh  custom_rubrics.py  monitoring_demo.py  monitoring_integration_example.py  prime_rl_demo.py  quality_flywheel_demo.py  reward_comparison_advanced.py  reward_comparison_example.py  reward_monitoring_example.py  train_with_rloo.sh
notebooks/: colab_train.ipynb  grading_comparison_analysis.ipynb
rubrics/: README.md  create_rubric_example.py  example_math.yaml  generated_rubrics.yaml
scripts/: README.md  analyze_reward_quality.py  compare_grading.py  demonstrate_grpo_instability.py  deploy_checkpoint.py  evaluate_model.py  model_utils.py  monitor_training.py  prepare_dataset.py  reward_pipeline.py  reward_utils.py  rloo_learner.py  run_quality_flywheel.py  setup_tpu_vm.sh  test_rubric.py  test_rubric_reward.py  train_grpo.py  train_grpo_monitored.py  train_prime_rl.py  train_small.py  train_with_judge.py  training_config.py  utils.py
src/: __init__.py  config.py  experiment_cli.py  experiment_tracker.py  grading_comparison.py  grading_registry.py  hyperparam_search.py  logger.py  main.py  model.py  reward_monitoring.py  reward_monitoring_integration.py  train_with_tracking.py  utils.py  wandb_rewards.py
tests/: __init__.py  conftest.py  test_grading_comparison.py  test_monitoring_imports.py  test_prime_rl.py  test_reward_monitoring.py  test_reward_quality.py  test_rubric_testing.py  test_simple.py
(+117 files in other folders)
