[project]
name = "tunix-hackathon-google"
version = "0.1.0"
description = "GRPO training on TPU with Tunix"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "datasets>=2.18.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "huggingface_hub>=0.21.0",
    "jax[tpu]==0.4.38",
    "flax==0.12.2",
    "optax==0.2.6",
    "grain-nightly",
    "wandb>=0.16.0",
    "tensorflow",
    "tensorflow_datasets",
    "google-tunix",
]

[tool.uv.sources]
google-tunix = { path = "tunix", editable = true }
